# taris

./: CMakeLists.txt  INSTALL  README.md  TARISvars.sh
src/: Graph.cpp  Graph.h  HyperSurface.cpp  HyperSurface.h  Makefile  NodeWeight.cpp  NodeWeight.h  Point.cpp  Point.h  Surface.cpp  Surface.h  TARIS-BuildIsosurface.cpp  TARIS-BuildTree.cpp  TARIS-Matrices.cpp  TARIS-TreesDistance.cpp  TarisApplication.cpp  TarisApplication.h  Tree.cpp  Tree.h  Triangle.cpp  Triangle.h  molekel.cpp  molekel.h  patterns.h
